project( thresholder )
cmake_minimum_required(VERSION 2.8)

find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
link_directories( ${OpenCV_LIB_DIR} )
add_executable( v1 threshv1.cpp )
add_executable( v2 threshv2.cpp )
add_executable( v3 threshv3.cpp )
add_executable( v4 threshv4.cpp )
add_executable( v5 threshv5.cpp )
add_executable( lineFitter lineFitter.cpp )

target_link_libraries( v1 ${OpenCV_LIBS} )
target_link_libraries( v2 ${OpenCV_LIBS} )
target_link_libraries( v3 ${OpenCV_LIBS} )
target_link_libraries( v4 ${OpenCV_LIBS} )
target_link_libraries( v5 ${OpenCV_LIBS} )
target_link_libraries( lineFitter ${OpenCV_LIBS} )
